@@ -240,5 +240,42 @@
     
     </dependencies>
   </dependencyManagement>
+  
+  
+  <!-- Reporting (mvn site) -->
+  <reporting>
+    <plugins>
+      <!-- JavaDocs: mvn javadoc:javadoc -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <aggregate>true</aggregate>
+          <source>1.5</source>
+          <links>
+            <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
+            <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
+          </links>
+          <breakiterator>true</breakiterator>
+          <verbose>false</verbose>
+          <maxmemory>512m</maxmemory>
+          <additionalJOption>
+            -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
+          </additionalJOption>
+        </configuration>
+      </plugin>
+      <!-- FindBugs: mvn findbugs:findbugs -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>1.2</version>
+      </plugin>
+      <!-- CheckStyle: mvn checkstyle:checkstyle -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </reporting>
 
 </project>
